# tiny-rollup

./: Cargo.toml  README.md
src/: main.rs
src/batch_processor/: batch_processor.rs  mod.rs
src/rpc_server/: server.rs
src/sequencer/: sequencer.rs
src/state_manager/: mod.rs  state_manager.rs
src/transaction_processor/: mod.rs  transaction_processor.rs
