[package]
name = "tiny-rollup"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bincode = "1.3.3"  # Using stable v1.x for compatibility
bs58 = "0.5.1"
clap = { version = "4.5.48", features = ["derive"] }
jsonrpsee = { version = "0.26.0", features = ["server", "macros"] }
merkle-tree-rs = "0.1.0"
rocksdb = "0.24.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
solana-client = "3.0.6"
solana-commitment-config = "3.0.0"
solana-rpc = "3.0.6"
solana-sdk = "3.0.0"
solana-transaction-status = "3.0.6"
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors"] }
hex = "0.4.3"
jsonrpsee-types = "0.26.0"
